--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     }
   ],  
    "env": {
-      "TOKEN": {
+      "BOT_TOKEN": {
          "description": "Your bot token. Get one from @BotFather duh",
          "required": true,
          "value": ""
